# tlapp

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md
benchmarks/: CMakeLists.txt  bench_util.h  boolean_perf.cpp  engine_perf.cpp  liveness_perf.cpp  quantifier_perf.cpp
docs/: README.md  bench.md  format.md  leaderless-consensus.md
docs/article/: AGENTS.md  README.md  leaderless-consensus-short.md  leaderless-consensus-trace.html  leaderless-consensus.html  leaderless-consensus.md  rush-prefix-visualizer.html
docs/leaderless-consensus/: README.md  calm.md  flat.md  most.md  rush.md  sore.md
docs/plans/: liveness.md  rush-state-space.md  rush-tlc-performance.md
leaderless_consensus/: CMakeLists.txt  calm.cpp  common.h  flat.cpp  model_common.h  most.cpp  rush.cpp  sore.cpp
leaderless_consensus/specs/: Calm.tla  Flat.cfg  Flat.tla  Most.cfg  Most.tla  Rush.tla  Sore.tla
plan/: boolean-optimization.md  liveness.md  partial-order-reduction.md
samples/: CMakeLists.txt  bench_util.h  die_hard.cpp  hour_clock.cpp  liveness_perf.cpp  missionaries_and_cannibals.cpp  paxos.cpp  perf_test.cpp  quantifier_perf.cpp  sample_main.cpp  tcommit.cpp  token_ring.cpp  two_phase.cpp
scripts/: perf.sh  perf_paxos.sh
src/: algorithm.h  as_string.cpp  as_string.h  boolean.h  context.cpp  context.h  demangle.cpp  demangle.h  descriptor.cpp  descriptor.h  engine.cpp  engine.h  error.h  evaluate.h  expression.h  extractor.h  field.h  flat.h  functional.h  hash.h  infix.h  inplace_vector.h  liveness.cpp  liveness.h  macro.h  macro_iterator.h  mix.h  model.h  object.h  operation.h  quantifier.h  set.h  std.h  tag.h  traits.h  troubleshooting.h  true_forward.h  value.cpp  value.h  var.h
tests/: as_string.cpp  auto.cpp  boolean.cpp  engine.cpp  engine_fixture.h  evaluate.cpp  expression.cpp  extractor.cpp  field.cpp  flat.cpp  functional.cpp  infix.cpp  inplace_vector.cpp  liveness.cpp  macro.cpp  macro_iterator.cpp  mem.cpp  operation.cpp  quantifier.cpp  ref.cpp  set.cpp  tag.cpp  true_forward.cpp  value.cpp  var.cpp
